--- a/backend/services/wp/docker-compose-sample.yml
+++ b/backend/services/wp/docker-compose-sample.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services: 
     wordpress:
-        image: yu-wp-instance:latest
+        image: $DOCKER_REG/yu-wp-instance:latest
         env_file: env.env
         labels: 
             - "oid=$oid" #Label for order id, this will in nginx configuration
