--- a/services/nginx/docker-compose.yml
+++ b/services/nginx/docker-compose.yml
@@ -2,9 +2,10 @@
 version: "3.7"
 services: 
     nginx:
-        image: yu-wp-nginx
+        image: $DOCKER_REG/yu-wp-nginx
         volumes: 
             - ngninx_log:/var/log/nginx
+            - 
             - /var/run/docker.sock:/var/run/docker.sock  #Docker Related stuff
         
 volumes: 
