added some more tests and refined scripts

--- a/services/nginx/Dockerfile
+++ b/services/nginx/Dockerfile
@@ -3,6 +3,6 @@ ADD . /nginx
 WORKDIR /nginx
 
 RUN apk update && apk add certbot certbot-nginx python3-pip bash docker
-
+ENTRYPOINT [ "./entrypoint.sh" ]
 
 
