--- a/db/env.env
+++ b/db/env.env
@@ -2,4 +2,5 @@ MYSQL_ROOT_PASSWORD=root
 DO_ACCESS_KEY=$DO_ACCESS_KEY
 DO_SECRET_KEY=$DO_SECRET_KEY
 DO_BUCKET=$DO_BUCKET
+DO_BUCKET_NAME=$DO_BUCKET_NAME
 PASSWD_FILE=/var/wp/db/passwd
