--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,3 +1,6 @@
 FROM mysql:5.7
+RUN apt update && apt -y install cron
 ADD . .
-ENTRYPOINT ["./entrypoint.sh"]
+COPY run.sh /usr/local/bin/run.sh
+RUN chmod +x /usr/local/bin/run.sh
+ENTRYPOINT ["bash","/run.sh"]
