--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,4 +1,4 @@
 FROM mysql:5.7
-RUN apt update && apt -y install cron
+RUN apt update && apt -y install cron vim
 ADD . .
 ENTRYPOINT ["bash","/run.sh"]
