--- a/db/env.env
+++ b/db/env.env
@@ -3,4 +3,5 @@ DO_ACCESS_KEY=$DO_ACCESS_KEY
 DO_SECRET_KEY=$DO_SECRET_KEY
 DO_BUCKET=$DO_BUCKET
 DO_BUCKET_NAME=$DO_BUCKET_NAME
+DO_BUCKET_HOST=$DO_BUCKET_HOST
 PASSWD_FILE=/var/wp/db/passwd
