added some tests and fixed some bugs

--- a/services/nginx/Dockerfile
+++ b/services/nginx/Dockerfile
@@ -2,7 +2,8 @@ FROM nginx:alpine
 ADD . /nginx
 WORKDIR /nginx
 
-RUN apk update && apk add certbot certbot-nginx python3-pip bash docker
-ENTRYPOINT [ "./entrypoint.sh" ]
+RUN apk update && apk add certbot certbot-nginx python3 python3-pip bash docker && pip3 install s3cmd
+
+ENTRYPOINT [ "bash","entrypoint.sh" ]
 
 
