--- a/db/env.env
+++ b/db/env.env
@@ -1,7 +1,7 @@
 MYSQL_ROOT_PASSWORD=root
-DO_ACCESS_KEY=$DO_ACCESS_KEY
-DO_SECRET_KEY=$DO_SECRET_KEY
-DO_BUCKET=$DO_BUCKET
-DO_BUCKET_NAME=$DO_BUCKET_NAME
-DO_BUCKET_HOST=$DO_BUCKET_HOST
+DO_ACCESS_KEY=C5IAQAZIW6D45E6UJ7CJ
+DO_SECRET_KEY=xkzZJWXLMBJRm59UEf9j0e4koKlTjWGzIX2tYsmVGVE
+DO_BUCKET=%(bucket)s.sgp1.digitaloceanspaces.com
+DO_BUCKET_NAME=yu-wp
+DO_BUCKET_HOST=sgp1.digitaloceanspaces.com
 PASSWD_FILE=/var/wp/db/passwd
