--- a/services/nginx/env.env
+++ b/services/nginx/env.env
@@ -1,2 +1,8 @@
 REDIS_HOST=redis
 SSL_DIR=/var/wp/ssl
+DOCKER_REG=10.139.128.30:5210
+DO_ACCESS_KEY=C5IAQAZIW6D45E6UJ7CJ
+DO_SECRET_KEY=xkzZJWXLMBJRm59UEf9j0e4koKlTjWGzIX2tYsmVGVE
+DO_BUCKET='%(bucket)s.sgp1.digitaloceanspaces.com'
+DO_BUCKET_NAME=yu-wp
+DO_BUCKET_HOST=sgp1.digitaloceanspaces.com
