--- a/services/nginx/Dockerfile
+++ b/services/nginx/Dockerfile
@@ -2,8 +2,8 @@ FROM nginx:alpine
 ADD . /nginx
 WORKDIR /nginx
 
-RUN apk update && apk add python3 python3-pip bash docker
-RUN pip3 install s3cmd 
+RUN apk update && apk add openrc python3  certbot-nginx certbot   bash docker
+RUN pip3 install s3cmd
 RUN pip3 install -r requirements.txt
 
 ENTRYPOINT [ "bash","entrypoint.sh" ]
