--- a/compose/nginx.yml
+++ b/compose/nginx.yml
@@ -2,7 +2,8 @@
 version: "3.7"
 services: 
     ssl:
-        depends_on: nginx
+        depends_on: 
+                - nginx
         image: ${DOCKER_REG}/yu_wp:ssl
 
         networks:
@@ -10,7 +11,8 @@ services:
         volumes:
             - wp_ssl:/var/wp/ssl  
     conf:
-        depends_on: nginx
+        depends_on:
+                - nginx
         image: ${DOCKER_REG}/yu_wp:conf
         networks:
             - wp_overlay
