--- a/compose/env/nginx.env
+++ b/compose/env/nginx.env
@@ -1,8 +1,12 @@
 REDIS_HOST=redis
-SSL_DIR=/var/wp/ssl
-DOCKER_REG=10.139.128.30:5210
 DO_ACCESS_KEY=C5IAQAZIW6D45E6UJ7CJ
 DO_SECRET_KEY=xkzZJWXLMBJRm59UEf9j0e4koKlTjWGzIX2tYsmVGVE
 DO_BUCKET='%(bucket)s.sgp1.digitaloceanspaces.com'
 DO_BUCKET_NAME=yu-wp
 DO_BUCKET_HOST=sgp1.digitaloceanspaces.com
+BACKUP_SITE_FILE=/var/wp/sites
+NGINX_CONF=/etc/nginx
+EMAIL=devanshguptamrt@gmail.com
+#DNODEID=
+#NODEID=
+#DOCKER_REG=
