--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:alpine
-RUN apk update && apk add docker bash 
+RUN apk update && apk add bash 
 ADD . .
 RUN pip3 install -r requirements.txt
 
