--- a/compose/db.yml
+++ b/compose/db.yml
@@ -8,19 +8,19 @@ services:
             - env/db.env
         volumes: 
             - db-data:/var/lib/mysql
-            - db-log:/var/log/mysql 
+            - log:/var/log 
             - wp-data:/var/wp/db
         deploy:
             placement:
                 constraints:
-                    - "node.role==manager"    
+                    - "node.id==${DNODEID}"    
         networks:
             - wp_overlay 
                         
 volumes:
     wp-data: 
     db-data:
-    db-log:    
+    log:    
 
 networks:
     wp_overlay:
