--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -1,11 +1,13 @@
 # Upstream to abstract backend connection(s) for php
-upstream php {
+upstream php_$oid {
         server $bind_addr;
 }
 
 server {
         ## Your website name goes here.
+
         server_name $server_names;
+        server_name $temp_name;
         ## Your only path reference.
         root /var/www/html;
         ## This should be in your http block and if it is, it's not needed here.
@@ -24,20 +26,20 @@ server {
 
         location / {
                 # This is cool because no php is touched for static content.
-                # include the "?$args" part so non-default permalinks doesn't break when using query string
-                try_files $uri $uri/ /index.php?$args;
+                # include the "?$$args" part so non-default permalinks doesn't break when using query string
+                try_files $$uri $$uri/ /index.php?$$args;
         }
 
-        location ~ \.php$ {
+        location ~ \.php$$ {
                 #NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
                 include fastcgi_params;
                 fastcgi_intercept_errors on;
-                fastcgi_pass php;
+                fastcgi_pass php_$oid;
                 #The following parameter can be also included in fastcgi_params file
-                fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+                fastcgi_param  SCRIPT_FILENAME $$document_root$$fastcgi_script_name;
         }
 
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico)$$ {
                 expires max;
                 log_not_found off;
         }
