--- a/services/nginx/wp.yml
+++ b/services/nginx/wp.yml
@@ -1,13 +1,15 @@
 version: "3.7"
 services: 
     wordpress:
-        image: $DOCKER_REG/yu-wp:wp
+        labels:
+            - "oid=$OID"
+        image: $DOCKER_REG/yu_wp:wp
         env_file: env.env
-        labels: 
-            - "oid=$oid" # Label for order id, this will in nginx configuration
-            - "plan=$plan" # Taken plan backup 
+        networks:
+            - wp_overlay
         ports: 
             - "0:80" # Random Port Choosen by system
+        hostname: "wp_$OID" # For network lookup    
         volumes: 
             - wp-content:/var/www/html 
             - wps_data:/wp/link # This mount point to used for backup purposes
@@ -18,10 +20,15 @@ services:
                     memory: "256M"
             placement:
                 constraints:
-                    - "node.id==$nid"
+                    - "node.id==$NODEID"
 
 volumes: 
     wp-content:
     wps_data:
         external: true
             name: wps_data    
+
+networks:
+    wp_overlay:
+        external:
+            name: wp_overlay
