--- a/services/wp/Dockerfile
+++ b/services/wp/Dockerfile
@@ -3,5 +3,4 @@ RUN apk update && apk add bash
 ADD . .
 # For sharebale mount point
 RUN mkdir -p /wp/link 
-
-CMD ["bash entrypoint.sh","&&","php-fpm"]
+ENTRYPOINT ["bash","entrypoint.sh"]
