--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,19 @@
 certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.2
-docker==4.2.0
 Flask==1.1.2
-gunicorn==20.0.4
 idna==2.9
+importlib-metadata==1.6.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jsonpickle==1.4.1
 MarkupSafe==1.1.1
 mysql-connector-python==8.0.20
-ordereddict==1.1
+protobuf==3.12.2
+python-digitalocean==1.15.0
 redis==3.5.2
 requests==2.23.0
 six==1.15.0
 urllib3==1.25.9
-websocket-client==0.57.0
 Werkzeug==1.0.1
+zipp==3.1.0
