changed everything to golang

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,16 @@
-FROM python:alpine
-RUN apk update && apk add bash 
+FROM golang:alpine AS pro
+RUN apk update && apk add git bash
+WORKDIR $GOPATH/src/wp/backend
 ADD . .
-RUN pip3 install -r requirements.txt
-RUN pip3 install gunicorn
-ENTRYPOINT [ "bash","entrypoint.sh" ]
+RUN go get -d -v 
+RUN go build -o $GOPATH/bin/backend .
+WORKDIR /backend
+RUN cp $GOPATH/bin .
+
+FROM alpine
+RUN apk update && apk add bash
+WORKDIR /backend
+COPY --from=pro /backend/backend /backend/backend
+ADD . .
+RUN mkdir -p /var/log/backend /var/wp
+ENTRYPOINT [ "/backend/backend" ]
