--- a/services/nginx/wp.yml
+++ b/services/nginx/wp.yml
@@ -25,7 +25,7 @@ services:
 volumes: 
     wp-content:
     wps_data:
-        external: true
+        external: 
             name: wps_data    
 
 networks:
