small bug fixed in wp image

--- a/services/wp/Dockerfile
+++ b/services/wp/Dockerfile
@@ -1,6 +1,7 @@
 FROM wordpress:php7.4-fpm-alpine 
 RUN apk update && apk add bash 
-ADD . .
-# For sharebale mount point
 RUN mkdir -p /wp/link 
+WORKDIR /wp
 ENTRYPOINT ["bash","entrypoint.sh"]
+COPY entrypoint.sh entrypoint.sh
+# For sharebale mount point
