--- a/services/wp/Dockerfile
+++ b/services/wp/Dockerfile
@@ -1,7 +1,7 @@
 FROM wordpress:php7.4-fpm-alpine 
 RUN apk update && apk add bash 
 RUN mkdir -p /wp/link 
-ENTRYPOINT ["bash","entrypoint.sh > /tmp/log.log"]
+ENTRYPOINT ["bash","entrypoint.sh"]
 COPY entrypoint.sh entrypoint.sh
 USER www-data
 # For sharebale mount point
