--- a/services/wp/Dockerfile
+++ b/services/wp/Dockerfile
@@ -2,6 +2,6 @@ FROM wordpress:php7.4-fpm-alpine
 RUN apk update && apk add bash 
 RUN mkdir -p /wp/link 
 ENTRYPOINT ["bash","entrypoint.sh"]
-COPY entrypoint.sh entrypoint.sh
-USER www-data
+WORKDIR /wp
+COPY  entrypoint.sh entrypoint.sh
 # For sharebale mount point
