--- a/services/nginx/wp.yml
+++ b/services/nginx/wp.yml
@@ -9,7 +9,7 @@ services:
             - wp_overlay
         ports: 
             - "0:9000" # Random Port Choosen by system
-        hostname: "wp_{{.OID}}" # For network lookup    
+        hostname: "wp-{{.OID}}" # For network lookup    
         volumes: 
             - wp-content:/var/www/html 
             - wps_data:/wp/link # This mount point to used for backup purposes
