service discovery logic improved

--- a/compose/env/nginx.env
+++ b/compose/env/nginx.env
@@ -1,4 +1,4 @@
-REDIS_HOST=redis
+REDIS_HOST=stack_redis_redis
 DO_ACCESS_KEY=C5IAQAZIW6D45E6UJ7CJ
 DO_SECRET_KEY=xkzZJWXLMBJRm59UEf9j0e4koKlTjWGzIX2tYsmVGVE
 DO_BUCKET='%(bucket)s.sgp1.digitaloceanspaces.com'
