--- a/compose/nginx.yml
+++ b/compose/nginx.yml
@@ -2,6 +2,8 @@
 version: "3.7"
 services: 
     nginx:
+        ports:
+            - "80:80"
         deploy:
             placement:
               constraints:
