--- a/services/nginx/wp.yml
+++ b/services/nginx/wp.yml
@@ -11,8 +11,8 @@ services:
             - "0:9000" # Random Port Choosen by system
         hostname: "wp-{{.OID}}" # For network lookup    
         volumes: 
-            - wp-content:/var/www/html 
-            - wps_data:/wp/link # This mount point to used for backup purposes
+            - wp-content:/var/www/{{.OID}}/html 
+            - wps_data:/var/www/{{.OID}} # This mount point to used for backup purposes
         deploy: 
             resources:
                 limits:
