--- a/services/nginx/wp.yml
+++ b/services/nginx/wp.yml
@@ -11,7 +11,7 @@ services:
             - "0:9000" # Random Port Choosen by system
         hostname: "wp-{{.OID}}" # For network lookup    
         volumes: 
-            - wp-content:/var/www/{{.OID}}/html 
+        #    - wp-content:/var/www/{{.OID}}/html 
             - wps_data:/var/www # This mount point to used for backup purposes
         deploy: 
             resources:
@@ -23,7 +23,7 @@ services:
                     - "node.id=={{.NODEID}}"
 
 volumes: 
-    wp-content:
+   # wp-content:
     wps_data:
         external: 
             name: wps_data    
