--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -9,7 +9,7 @@ server {
         server_name {{.ServerNames}};
         server_name {{.TempName}};
         ## Your only path reference.
-        root /var/wp//html/{{.OID}}/html;
+        root /var/wp/html/{{.OID}}/html;
         ## This should be in your http block and if it is, it's not needed here.
         index index.php;
 
@@ -44,3 +44,4 @@ server {
                 log_not_found off;
         }
 }
+log_format scripts '$document_root$fastcgi_script_name > $request';
