--- a/compose/nginx.yml
+++ b/compose/nginx.yml
@@ -29,7 +29,7 @@ services:
             
             - /var/run/docker.sock:/var/run/docker.sock  #Docker Related stuff
             - certs:/var/letsencrypt
-            - wps_data:/var/wp/html
+            - wps_data:/var/www:ro
 volumes: 
     conf:    
     logs: # For logs
