--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -9,7 +9,7 @@ server {
         server_name {{.ServerNames}};
         server_name {{.TempName}};
         ## Your only path reference.
-        root /var/www/html;
+        root /var/www/{{.OID}}/html;
         ## This should be in your http block and if it is, it's not needed here.
         index index.php;
 
